--- a/gh-battle/app/index.css
+++ b/gh-battle/app/index.css
@@ -159,6 +159,10 @@ card-list a {
     padding: 10px;
 }
 
+.players-container {
+    margin: 100px 0;
+}
+
 .player-label {
     font-size: 20px;
     margin: 5px 0;
@@ -180,6 +184,24 @@ card-list a {
 
 .player-inputs button {
     flex: 1;
+    margin-left: 10px;
+}
+
+.avatar-small {
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+}
+
+.player-info {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    font-size: 20px;
+    padding: 10px;
+}
+
+.player-info .link {
     margin-left: 10px;
 }
 
